--- a/main/cloudbuild.yaml
+++ b/main/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
-   args: [ 'build', '-t', 'gcr.io/syntio-aquarium/hello-world01@sha256:e4ba09c0f6f317ad15d0085e9e099391567f7d97dc95b15d3eca804641109d8a', '-f', '/Dockerfile', '.' ]
+   args: [ 'build', '-t', 'gcr.io/syntio-aquarium/hello-world01@sha256:e4ba09c0f6f317ad15d0085e9e099391567f7d97dc95b15d3eca804641109d8a', '-f', '/', '.' ]
