--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/syntio-aquarium/hello-world01', '.']
+   args: ['build', '-t', 'gcr.io/syntio-aquarium/hello-world01@sha256:a356611e9ea7265cf905a760986bd60d4b5bd8289405c6975d8e53515f873102', '.']
