--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/syntio-aquarium/hello-world01@', '.']
+   args: ['build', '-t', 'gcr.io/syntio-aquarium/hello-world02', '.']
