--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,3 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01$COMMIT_SHA', '.']
-
-
-   
+   args: ['build', '-f', './Dockerfile', '--tag=gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
