--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-f', './Dockerfile', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
+   args: ['builds', 'submit', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
