--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+  - id: go_linter
+    name: "golangci/golangci-lint"
+    args: ["golangci-lint", "run"]
   - id: docker
     name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
