--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,10 @@ steps:
   - id: go_linter
     name: "golangci/golangci-lint"
     args: ["golangci-lint", "run"]
+  - id: go_sec
+    name: "securego/gosec"
+    args: ["helloworld"]
+    env: ["GOPATH=."]
   - id: docker
     name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
