--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+  - id: eclint
+    name: "e53e225/editorconfig-checker"
   - id: go_linter
     name: "golangci/golangci-lint"
     args: ["golangci-lint", "run"]
