--- a/main/.editorconfig
+++ b/main/.editorconfig
@@ -6,5 +6,5 @@ trim_trailing_whitespace = true
 end_of_line = crlf
 indent_size = 8
 indent_style = tab
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
