--- a/main/.editorconfig
+++ b/main/.editorconfig
@@ -3,7 +3,7 @@ root = true
 [*]
 charset = utf-8
 trim_trailing_whitespace = true
-end_of_line = crlf
+end_of_line = lf
 indent_size = 8
 indent_style = tab
 insert_final_newline = true
