--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,16 @@ steps:
     name: "securego/gosec"
     args: ["helloworld"]
     env: ["GOPATH=./main"]
-  - id: docker
-    name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
-images: ['gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01']
-    
+#  - id: docker
+#    name: 'gcr.io/cloud-builders/docker'
+#    args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
+#images: ['gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01']
+  - id: deployment
+    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    args:
+    - gcloud
+    - functions
+    - deploy
+    - kiki-function
+    - --region=us-central1
+    - --source=.
