--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-  - id: eclint
-    name: "e53e225/editorconfig-checker"
-  - id: go_linter
-    name: "golangci/golangci-lint"
-    args: ["golangci-lint", "run"]
-  - id: go_sec
-    name: "securego/gosec"
-    args: ["helloworld"]
-    env: ["GOPATH=./main"]
+#  - id: eclint
+#    name: "e53e225/editorconfig-checker"
+#  - id: go_linter
+#    name: "golangci/golangci-lint"
+#    args: ["golangci-lint", "run"]
+#  - id: go_sec
+#    name: "securego/gosec"
+#    args: ["helloworld"]
+#    env: ["GOPATH=./main"]
 #  - id: docker
 #    name: 'gcr.io/cloud-builders/docker'
 #    args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
@@ -21,3 +21,4 @@ steps:
     - kiki-function
     - --region=us-central1
     - --source=.
+    - --trigger=http
