--- a/tester.yaml
+++ b/tester.yaml
@@ -8,7 +8,8 @@ steps:
     name: "securego/gosec"
     args: ["helloworld"]
     env: ["GOPATH=./main"]
-  - id: docker
-    name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
-images: ['gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01']
+
+#  - id: docker
+#    name: 'gcr.io/cloud-builders/docker'
+#    args: ['build', '-t', 'gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01', '.']
+#images: ['gcr.io/syntio-aquarium/github.com/dinosehic/hello-world01']
