--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,8 +2,6 @@ name: Go
 
 on:
   push:
-    branches: [ .* ]
-  pull_request:
     branches: [ master ]
 
 jobs:
@@ -16,8 +14,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
-    
-    - name: golangci-lint
-      uses: golangci/golangci-lint-action@v2
-
+        go-version: 1.16
+        
+    - name: Nexus Repo Publish
+      uses: sonatype-nexus-community/nexus-repo-github-action@master
+      with:
+        serverUrl: http://157.90.155.174:8081/
+        username: admin
+        password: ${{ 86c79dd1-9a5f-4723-ad45-0a6e6fa3c88c }}
+        format: docker
+        repository: docker-private
