--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,4 +19,5 @@ jobs:
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v2
       with:
-          timeout: 10m0s
+          args: 
+            --timeout 10m0
