--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,4 +20,4 @@ jobs:
       uses: golangci/golangci-lint-action@v2
       with:
           args: 
-            --timeout 10m0
+            --timeout=10m0
