--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,6 @@ steps:
       - functions
       - deploy
       - kiki-function
-      - --runtime=go113
+      - --runtaime=go113
       - --region=us-central1
       - --source=./main
