--- a/tester.yaml
+++ b/tester.yaml
@@ -2,10 +2,10 @@ steps:
   - id: eclint
     name: "e53e225/editorconfig-checker"
     waitFor: ['-']
-  #- id: go_linter
-  #  name: "golangci/golangci-lint"
-  #  waitFor: ['-']
-  #  args: ["golangci-lint", "run"]
+  - id: go_linter
+    name: "golangci/golangci-lint"
+    waitFor: ['-']
+    args: ["golangci-lint", "run", "--timeout=10m0s"]
   #- id: go_sec
   #  name: "securego/gosec"
   #  waitFor: ['-']
