--- a/tester.yaml
+++ b/tester.yaml
@@ -6,6 +6,15 @@ steps:
     name: "golangci/golangci-lint"
     waitFor: ['-']
     args: ["golangci-lint", "run", "--timeout=10m0s"]
+  # Run security tests
+  - id: 'security-tests'
+    name: securego/gosec
+    waitFor: ['-']
+    env:
+    - 'GO116MODULE=on'
+    args:
+    - ./..
+   
   #- id: go_sec
   #  name: "securego/gosec"
   #  waitFor: ['-']
