--- a/tester.yaml
+++ b/tester.yaml
@@ -5,7 +5,7 @@ steps:
   - id: go_linter
     name: "golangci/golangci-lint"
     waitFor: ['-']
-    args: ["golangci-lint", "run", "--timeout=10m0s"]
+    args: ["golangci-lint", "run", "--timeout=10m0s", "--no-fail"]
   # Run security tests
   - id: 'security-tests'
     name: securego/gosec
