--- a/tester.yaml
+++ b/tester.yaml
@@ -4,7 +4,7 @@ steps:
     waitFor: ['-']
   - id: go_linter
     name: "golangci/golangci-lint"
-    waitFor: ['-']
+    waitFor: ['security-tests']
     args: ["golangci-lint", "run", "--timeout=10m0s", "--no-fail"]
   # Run security tests
   - id: 'security-tests'
